Base64 bug fixed