@@ -2,7 +2,6 @@ package ICAT.backend.utils;
 
 
 import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Decoder;
 
 import java.io.*;
 import java.util.Base64;
@@ -92,23 +91,18 @@ public class ImageBase64Util {
     }
 
     public static MultipartFile base64ToMultipart(String base64) {
-        try {
-            String[] baseStrs = base64.split(",");
+        String[] baseStrs = base64.split(",");
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] b = new byte[0];
-            b = decoder.decodeBuffer(baseStrs[1]);
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] b = new byte[0];
+        b = decoder.decode(baseStrs[1]);
 
-            for (int i = 0; i < b.length; ++i) {
-                if (b[i] < 0) {
-                    b[i] += 256;
-                }
+        for (int i = 0; i < b.length; ++i) {
+            if (b[i] < 0) {
+                b[i] += 256;
             }
-            return new BASE64DecodedMultipartFile(b, baseStrs[0]);
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;
         }
+        return new BASE64DecodedMultipartFile(b, baseStrs[0]);
     }
 
 }
